<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.elecom.smartcarrier.main.MainActivity">

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_sign_in"
        app:showAsAction="never"
        android:title="@string/action_sign_in" />

    <item
        android:id="@+id/action_sign_out"
        app:showAsAction="never"
        android:title="@string/action_sign_out" />

    <item
        android:id="@+id/action_delete_account"
        app:showAsAction="never"
        android:title="@string/action_delete_account" />

    <item
        android:id="@+id/action_clear_data"
        app:showAsAction="never"
        android:title="@string/action_clear_data" />

</menu>