<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.set.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/account_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/account_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/email_title"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/email_title"
            app:layout_constraintTop_toBottomOf="@+id/account_header"
            app:layout_constraintBottom_toTopOf="@+id/uname_title"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/uname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/uname_title"
            app:layout_constraintTop_toBottomOf="@+id/email_title"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notifications_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/account_layout"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/notifications_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/notifications_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Switch
            android:id="@+id/open_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_title"
            app:layout_constraintTop_toBottomOf="@+id/notifications_header"
            app:layout_constraintBottom_toTopOf="@+id/distance_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Switch
            android:id="@+id/distance_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"
            app:layout_constraintTop_toBottomOf="@+id/open_title"
            app:layout_constraintBottom_toTopOf="@+id/group_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Switch
            android:id="@+id/group_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_title"
            app:layout_constraintTop_toBottomOf="@+id/distance_title"
            app:layout_constraintLeft_toLeftOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>