<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".init.GuideActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/image_carrier"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_suitcase_1920"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/txt_description1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description1"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/image_carrier" />

    <TextView
        android:id="@+id/txt_description2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_description2"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txt_description1"
        />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn_start"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>