<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".main.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_map" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_state"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_carrier_green" />

                <TextView
                    android:id="@+id/text_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/state_closed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_lock"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_outline_lock_24" />

                <TextView
                    android:id="@+id/text_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lock_closed" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:layout_width="512dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="경보음 Off"
                android:textOn="경보음 On" />

            <Button
                android:id="@+id/btn_lockOn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="잠금 ON" />
            <Button
                android:id="@+id/btn_lockOff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="잠금 OFF" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>